# Project-Viikate

./: .gitignore  LICENSE  README.md  flake.nix
Guidance, Navigation and Control/Flight Code/: platformio.ini
Guidance, Navigation and Control/Flight Code/include/: Constants.h  Control.h  Datalogger.h  FlightData.h  Sensors.h  StateMachine.h
Guidance, Navigation and Control/Flight Code/src/: Control.cpp  Datalogger.cpp  Sensors.cpp  StateMachine.cpp  main.cpp
Guidance, Navigation and Control/Simulation/: Flight_dynamics_simulation.tex
Guidance, Navigation and Control/Simulation/closedModel/: closedmodel.slx  closedparameters.m  thrustcurve.mat
Guidance, Navigation and Control/Simulation/openModel/: openmodel.slx  parameters.m
Stuctrure/OpenRocket designs/: Project Viikate Reference Hull 1500mm Spincam Front.ork  viikate.ork  viikateV02.ork  viikateV03.ork
avionics/: #auto_saved_files#  avionics.kicad_pcb  avionics.kicad_pro  avionics.kicad_sch  barometer.kicad_sch  fp-info-cache  imu.kicad_sch  magnetometer.kicad_sch  peripherals.kicad_sch  psu.kicad_sch  pyro_and_servos.kicad_sch  ~avionics.kicad_pcb.lck
avionics/libraries/: MMC5983MA.kicad_sym  MMC5983MA_MEM.kicad_mod  PQFN50P450X300X100-16N.kicad_mod  QFN50P300X300X100-17N-D.kicad_mod  TPS548B23VANR.kicad_sym  TPS62153RGTR.dcm  TPS62153RGTR.kicad_sym  TPS62153RGTR.lib  TPS62153RGTR.mod  TRANS_RF4C_ROM.kicad_mod  VAN0019A-MFG.kicad_mod  custom.kicad_sym  teensy.kicad_sym
avionics/libraries/5-146290-3/: 5-146290-3.kicad_sym  TE_5-146290-3.kicad_mod
avionics/libraries/BMI088/: BMI088.kicad_sym
firmware/: Justfile  meson.build
firmware/cross/: teensy-40.ini  teensy-41.ini
firmware/src/: main.cpp  meson.build
firmware/src/drivers/: bme280.cpp  meson.build
firmware/subprojects/: teensy_core.wrap
firmware/subprojects/packagefiles/teensy_core/: meson.build
