project(
  'teensy_core',
  'c', 'cpp',
  version: '1.59',
  default_options: [
    'buildtype=release',
    'cpp_std=gnu++17'
  ]
)

libs = ['arm_cortexM7lfsp_math', 'm', 'stdc++']

# --------------------------------------------------------------------
# Sources
# --------------------------------------------------------------------
src = files(
  'teensy4/memcpy-armv7m.S',
  'teensy4/memset.S',
  'teensy4/AudioStream.cpp',
  'teensy4/CrashReport.cpp',
  'teensy4/DMAChannel.cpp',
  'teensy4/EventResponder.cpp',
  'teensy4/HardwareSerial.cpp',
  'teensy4/HardwareSerial1.cpp',
  'teensy4/HardwareSerial2.cpp',
  'teensy4/HardwareSerial3.cpp',
  'teensy4/HardwareSerial4.cpp',
  'teensy4/HardwareSerial5.cpp',
  'teensy4/HardwareSerial6.cpp',
  'teensy4/HardwareSerial7.cpp',
  'teensy4/HardwareSerial8.cpp',
  'teensy4/IPAddress.cpp',
  'teensy4/IntervalTimer.cpp',
  'teensy4/MTP_Storage.cpp',
  'teensy4/MTP_Teensy.cpp',
  'teensy4/Print.cpp',
  'teensy4/Stream.cpp',
  'teensy4/Time.cpp',
  'teensy4/Tone.cpp',
  'teensy4/WMath.cpp',
  'teensy4/WString.cpp',
  'teensy4/analog.c',
  'teensy4/bootdata.c',
  'teensy4/clockspeed.c',
  'teensy4/debugprintf.c',
  'teensy4/delay.c',
  'teensy4/digital.c',
  'teensy4/eeprom.c',
  'teensy4/extmem.c',
  'teensy4/fuse.c',
  'teensy4/interrupt.c',
  'teensy4/keylayouts.c',
  'teensy4/libc.c',
  'teensy4/main.cpp',
  'teensy4/new.cpp',
  'teensy4/nonstd.c',
  'teensy4/pwm.c',
  'teensy4/rtc.c',
  'teensy4/serialEvent.cpp',
  'teensy4/serialEvent1.cpp',
  'teensy4/serialEvent2.cpp',
  'teensy4/serialEvent3.cpp',
  'teensy4/serialEvent4.cpp',
  'teensy4/serialEvent5.cpp',
  'teensy4/serialEvent6.cpp',
  'teensy4/serialEvent7.cpp',
  'teensy4/serialEvent8.cpp',
  'teensy4/serialEventUSB1.cpp',
  'teensy4/serialEventUSB2.cpp',
  'teensy4/sm_alloc_valid.c',
  'teensy4/sm_calloc.c',
  'teensy4/sm_free.c',
  'teensy4/sm_hash.c',
  'teensy4/sm_malloc.c',
  'teensy4/sm_malloc_stats.c',
  'teensy4/sm_pool.c',
  'teensy4/sm_realloc.c',
  'teensy4/sm_realloc_i.c',
  'teensy4/sm_realloc_move.c',
  'teensy4/sm_szalloc.c',
  'teensy4/sm_util.c',
  'teensy4/sm_zalloc.c',
  'teensy4/startup.c',
  'teensy4/tempmon.c',
  'teensy4/usb.c',
  'teensy4/usb_audio.cpp',
  'teensy4/usb_desc.c',
  'teensy4/usb_flightsim.cpp',
  'teensy4/usb_inst.cpp',
  'teensy4/usb_joystick.c',
  'teensy4/usb_keyboard.c',
  'teensy4/usb_midi.c',
  'teensy4/usb_mouse.c',
  'teensy4/usb_mtp.c',
  'teensy4/usb_rawhid.c',
  'teensy4/usb_seremu.c',
  'teensy4/usb_serial.c',
  'teensy4/usb_serial2.c',
  'teensy4/usb_serial3.c',
  'teensy4/usb_touch.c',
  'teensy4/yield.cpp',
)
inc = include_directories('teensy4/.')

# --------------------------------------------------------------------
# Build the static library
# --------------------------------------------------------------------
teensy_core_lib = static_library(
  'teensy_core',
  sources: src,
  include_directories: inc,
  dependencies: [],
  install: false,
  pic: false,
)

teensy_core_dep = declare_dependency(
  include_directories: inc,
  link_with: teensy_core_lib,
)
